--- a/groceryTracker/grocery_tracker.html
+++ b/groceryTracker/grocery_tracker.html
@@ -15,6 +15,6 @@
   <button onclick="calculateTotal()">Calculate Total Amount</button><br><br>
 
   <p id="result"></p>
-<script src="./calculate_Area.js"></script>
+<script src="./grocery_tracker.js"></script>
 </body>
 </html>
